--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.0",
+    "firebase": "^10.13.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
